tests/baselines/reference/constructableDecoratorOnClass01.errors.txt
tests/cases/conformance/decorators/class/constructableDecoratorOnClass01.ts(4,1): error TS1238: Unable to resolve signature of class decorator when called as an expression.
  Cannot invoke an expression whose type lacks a call signature.


==== tests/cases/conformance/decorators/class/constructableDecoratorOnClass01.ts (1 errors) ====
    
    class CtorDtor {}
    
    @CtorDtor
    ~~~~~~~~~
!!! error TS1238: Unable to resolve signature of class decorator when called as an expression.
!!! error TS1238:   Cannot invoke an expression whose type lacks a call signature.
    class C {
    
    }
    